# Climate-Sentinel

./: Afforestration_Suggestion_Model.ipynb  ForestCoverStreamlit.py  GIS_Visualization.ipynb  README.md  RenewableStreamlit.py  combinedStreamlit.py  disasterStreamlit.py  disaster_prediction.ipynb  landcover.ipynb  nicobar_forest_loss_cluster_map.html  pyproject.toml  renewablemodel.ipynb  tree_cover_loss_heatmap.html  weatherStreamlit.py  weather_forcast_app.py  weather_forecast.ipynb
climaterepo/_build/.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
climaterepo/_build/html/: .buildinfo  notebooks.html  searchindex.js
climaterepo/_build/jupyter_execute/: markdown-notebooks.ipynb  notebooks.ipynb
data/: cleaned_India_Flood_Inventory_v3.csv  cleaned_Indian_earthquake_data.csv  subnationalforestcover.csv  weather_data.csv
