[tool.poetry]
name = "sujalalmeida-repo-57"
version = "0.1.0"
description = ""
authors = ["Austin Dmello <austindmello2004@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter-book = "^1.0.3"
ipykernel = "^6.29.5"
ghp-import = "^2.1.0"
pandas = "^2.2.3"
geopandas = "^1.0.1"
folium = "^0.17.0"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
